Fix layout problems with overflowing path names

--- a/packages/hekla-viewer/src/App.css
+++ b/packages/hekla-viewer/src/App.css
@@ -17,8 +17,10 @@
 
 .App > .content > .content-pane-container {
   flex: 6;
+  overflow: hidden;
 }
 
 .App > .content > .sidebar-container {
   flex: 2;
+  overflow: hidden;
 }
